[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/General/timer_clock_face.png" type="Texture" id=1]
[ext_resource path="res://Elements/TimerClock.gd" type="Script" id=2]
[ext_resource path="res://Resources/General/time_clock_hand.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sounds/Clock/Ticking.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Sounds/Clock/Ding.wav" type="AudioStream" id=5]

[node name="TimerClock" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HandSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, -15 )

[node name="TickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="RingPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="finished" from="TickPlayer" to="." method="_on_AudioStreamPlayer_finished"]
